# email-adapt

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
email_adapt/: initial_handshake.py
email_adapt/app/: app.py
email_adapt/database/: vector_database.py  vector_store.py
email_adapt/gmail/gmail-extension/: manifest.json  package.json
email_adapt/gmail/gmail-extension/content/: content.js
email_adapt/gmail/gmail-extension/popup/: popup.css  popup.html  popup.js
email_adapt/gmail/gmail-extension/utils/: api.js  config.js
email_adapt/gmail/src/: build_openai_message.py  extract_body.py  initial_handshake.py  next_email_generator.py  threads.py  user_email_style.py  user_profile.py
email_adapt/gmail/src/api/: threads.py
email_adapt/gmail/src/utils/: threads_utils.py  validation.py
email_adapt/prompts/: user_profile.yaml
src/gmail/src/: build_openai_message.py  threads.py
src/gmail/src/utils/: validation.py
